syntax = "proto3";
import "google/protobuf/empty.proto";

message Result {
  float wellness = 1;
  float pollution = 2;
  string datetime = 3;
}

service ResultsService {
  rpc SendResults (Result) returns (google.protobuf.Empty) {}
}