syntax = "proto3";
import "google/protobuf/empty.proto";

message ConnectionT {
  int32 port = 1;
}

service ConnectionTService {
  rpc SubscribeToProxy (ConnectionT) returns (google.protobuf.Empty) {}
}
